master
 - ...

0.6.0
 - avoid error when special use case key `test_event_server_jane` is not
   present (see #71)
 - add possibility to specify complex, time-dependent station combinations
   (see #73)
 - avoid errors when encountering arrivals without a residual time (see #52)
 - add experimental option for reviewing all picks in a given catalog (as
   opposed to normal operation which only considers the first event in a loaded
   catalog file, see #50)
 - enable opting for physical unit conversion switch to go to displacement or
   acceleration (so far always was converting to velocity; see #43)
 - use obspy read_inventory() and Inventory/Response objects internally for
   all metadata, regardless of source (see #77)
 - reimplement AR picker (see #75)
 - make reference time given on command line the zero-time on time axis always
   (so far if an offset was given the zero time was equal to reference time
   plus offset, see #78)
 - save raw waveform data and station metadata in current obspyck instance's
   temporary directory for easy reuse (see #79)
 - taper settings (applied before any filtering) can now be controlled via
   config file (see #80)
 - speed up magnitude calculation by reusing unchanged station magnitudes when
   updating the network magnitude while changing magnitude picks on one station
   (see #88)

0.5.1
 - fix getting metadata via arclink (see #65)
 - make it possible to set default filter corners via config file (see #66)
 - enable parallel event upload/replacement/deletion on seishub and jane
   (see #67)
 - fix Qt application Window icon (see #68)

0.5.0
 - add support for magnitude estimation for data fetched from an FDSN server
   (using full response)
 - depending on obspy >=1.1.0 now
 - add support for scrolling along time axis with mouse wheel + modifier
   (by default "alt" key, see #45)
 - fix station metadata output in hypo71 format (for location routines)
   for longitude <0 (see #47)